--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,217 @@
-.App {
+/* Google fonts */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Spectral:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;600&display=swap');
+/* Variable CSS */
+:root{
+--header-height: 3rem;
+
+/* colors */
+--title-color: #36454F;
+--special-color: #B7B7B7;
+--highlight-color: #1A2421;
+--title-color-dark: #030504;
+--text-color:  #555555;
+--container-color: #DDDDDD;
+
+/* Font & Typography */
+--body-font:"Poppins", sans-serif;
+
+
+--big-font-size: 3.5rem;
+--h1-font-size: 2.25rem;
+--h2-font-size: 1.5rem;
+--h3-font-size: 1.25rem;
+--normal-font-size: 1rem;
+--small-font-size: 0.875rem;
+--smaller-font-size: 0.800rem;
+--tiny-font-size: 0.625rem;
+
+/* font weight */
+--font-normal:400;
+--font-medium: 500;
+--font-semi-bold: 600;
+
+/* Margins Bottom */
+
+--mb-0-25: 0.25rem;
+--mb-0-5: 0.5rem;
+--mb-0-75:0.75rem;
+--mb-1: 1rem;
+--mb-1-5: 1.5rem;
+--mb-2: 2rem;
+--mb-2-5: 2.5rem;
+--mb-3: 3rem;
+
+/* Z index  */
+
+--z-tooltip: 10;
+--z-fixed: 100;
+--z-modal: 1000;
+}
+
+
+/* Responsive typography */
+ @media screen and (max-width: 992px) {
+  :root { 
+    --big-font-size: 2.75rem;
+    --h1-font-size: 1.5rem;
+    --h2-font-size: 1.25rem;
+    --h3-font-size: 1rem;
+    --normal-font-size: 0.938rem; 
+    --small-font-size: 0.813rem;
+    --smaller-font-size: 0.75rem;
+  }
+}
+/* Base  */
+* {
+  margin: 0;
+  padding: 0; 
+  box-sizing: border-box;
+}
+
+html 
+{
+  scroll-behavior: smooth; 
+}
+
+body,
+button,
+input,
+textarea {
+  font-family: var(--body-font); 
+  font-size: var(--normal-font-size);
+  /* position: relative; */
+}
+
+body{
+  background-image: linear-gradient(#F4F2F3,#E8E8EA);
+  /* background-color: #EDEDED; */
+  color: var(--text-color);
+}
+  
+h1, h2, h3{
+  color: var(--title-color); 
+  font-weight: var(--font-semi-bold);
+}
+
+ul { 
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+  
+button {
+  cursor: pointer; 
+ 
+}
+  
+img {
+  max-width: 100%; 
+  height: auto;
+}
+
+.section { 
+  padding: 6rem 0 2rem;
+}
+
+.section_title {
+  font-size: var(--h1-font-size); 
+  color: var(--title-color);
+}
+
+.section_subtitle { 
+  display: block; 
+  font-size: var(--small-font-size); 
+  margin-bottom: 4rem;
+}
+
+.section_title,
+.section_subtitle {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container{
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.grid{
+  display: grid;
+  gap: 1.5rem;
+}
+
+.button{
+  display: inline-block;
+  background-color: var(--body-color);
+  border: 2px solid rgba(0, 0, 0, 0.3);;
+  color: var(--title-color);
+  padding: 1.25rem 2rem;
+  border-radius: 1rem;
+  font-weight: var(--font-medium);
+}
+
+.button:hover {
+  background-color: var(--container-color);
+  color: var(--body-color);
+  border: none;
+}
+
+.button_icon {
+  margin-left: var(--mb-0-5);
+
+}
+
+.button--flex {
+  display: inline-flex;
+  align-items: center; 
+}
+
+/* BreakPoints */
+
+/* Large  */
+@media screen and  (max-width: 992px) {
+  .container{
+    margin-left: var(--mb-1-5);
+    margin-right: var(--mb-1-5);
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .button{
+    padding: 1rem 1.75rem;
   }
-  to {
-    transform: rotate(360deg);
+  .button_icon{
+    width: 22px;
+    height: 22px;
   }
+
+}
+/* medium */
+@media screen and  (max-width: 768px) {
+  body{
+    margin: 0 0 var(--header-height);
+  }
+  .section{
+    padding: 2rem 0 4rem;
+  }
+  .section_subtitle{
+    margin-bottom: var(--mb-3);
+  }
+  
+}
+@media screen and  (max-width: 576px) {
+  
+}
+/* small  */
+@media screen and  (max-width: 350px) {
+  :root{
+    --big-font-size:2.25rem;
+  }
+  .container{
+    margin-left: var(--mb-1);
+    margin-right: var(--mb-1);
+  }
+  
 }
