--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -7,7 +7,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   margin: 0px;
-  height: 100vh;
+  height: auto;
 }
 .home_container {
   row-gap: 5rem;
@@ -216,4 +216,15 @@
     width: 180px;
     height: 180px;
   }
+}
+
+
+/* Loading Animation */
+.home.loading .home_img {
+  animation: profile_animate 8s ease-in-out infinite 1s;
+}
+
+/* Hover Effects */
+.button:hover .button__icon {
+  transform: scale(1.3);
 }
