--- a/src/App.css
+++ b/src/App.css
@@ -135,7 +135,7 @@ img {
 }
 
 .container{
-  max-width: 1000px;
+  /* max-width: 1000px; */
   margin-left: auto;
   margin-right: auto;
 }
@@ -175,10 +175,10 @@ img {
 
 /* Large  */
 @media screen and  (max-width: 992px) {
-  .container{
+  /* .container{
     margin-left: var(--mb-1-5);
     margin-right: var(--mb-1-5);
-  }
+  } */
   .button{
     padding: 1rem 1.75rem;
   }
